Widen unit selector to prevent text clipping

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -189,7 +189,7 @@ select:focus {
 }
 
 .canvas-unit {
-  width: 50px;
+  width: 62px;
 }
 
 .canvas-reset {
